<resources>
    <string name="app_name">Project_IoT</string>
    <string name="title">DeliGO</string>
    <string name="apellido">Apellidos</string>
    <string name="nombre">Nombres</string>
    <string name="domicilio">Domicilio</string>
    <string name="dni">Número de documento</string>
    <string name="tipoDocumento">Tipo de documento</string>
    <string name="nacimiento">Fecha de nacimiento</string>
    <string name="telefono">Telefono</string>
    <string name="restaurante">Restaurante</string>
    <string name="ubicacionLocal">Ubicación</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión o Registrarse</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="welcome">"¡Bienvenido a DeliGO!"</string>
    <string name="invalid_username">Nombre de usuario no valido</string>
    <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"Inicio sesión fallido"</string>
    <string name="precio">Precio</string>
    <string name="nombre1">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="descripcionBurger">Es la comida principal del Crustaceo Cascarudo,\nsu aspecto es similar a una hamburguesa</string>

    <string-array name="elementos">
        <item>Tipo de Documento</item>
        <item>Documento Nacional de Identidad</item>
        <item>Pasaporte</item>
    </string-array>

    <string-array name="categoria_list">
        <item>Categoría</item>
        <item>Categoría 1</item>
        <item>Categoría 2</item>
        <item>Categoría 3</item>
        <item>Categoría 4</item>
    </string-array>


    <dimen name="margin_top">250sp</dimen>

</resources>