<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RepartidorActivity">

    <!-- Esto de aquí es el navbar o como se llame, la verdad no se que ponerle por ahora xd
    asi que decidí dejarle el espacio para ver si lo fragmentan o copian y pegan-->
    <!--
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorOnCustomColor1" />

    </com.google.android.material.appbar.AppBarLayout>
    -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10sp"
            android:src="@drawable/icons8_izquierda_circulo_48"
            android:onClick="saltarInicioSesion"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Repartidor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/repartidor_img"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:src="@drawable/repartidor"
            android:clipToOutline="true"
            android:background="@drawable/circular_image_background"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repNombre"
                app:startIconDrawable="@drawable/baseline_person_outline_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gabriel"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/apellido">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Talledo"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="repartidor@deligo.com"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:hint="@string/telefono">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="982812260"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:hint="@string/domicilio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repDomicilio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Av.Urubamba"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="bottom|center"
        android:background="@color/light_green"
        app:menu="@menu/bottom_navigation_menu"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>