<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SuperAdminFragments.VistaPerfilRepartidor">

    <!--
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </com.google.android.material.appbar.AppBarLayout>
    -->


    <!--android:onClick="saltarInicioSesion"-->


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/light_green"
            app:menu="@menu/top_app_bar_super_admin"
            android:layout_marginTop="25dp"
            app:navigationIcon="@drawable/icons8_izquierda_circulo_48"
            app:title="@string/title"
            app:titleTextAppearance="@style/ToolbarTitleStyle"
            app:titleCentered="true"/>



    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extended_fab"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/md_theme_error"
            android:contentDescription="Cerrar Sesión"
            android:text="Cerrar Sesión"
            app:icon="@drawable/baseline_exit_to_app_24" />

        <ImageView
            android:id="@+id/fotoRepartidor"
            android:layout_width="164dp"
            android:layout_height="164dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/circular_image_background"
            android:clipToOutline="true"
            android:src="@drawable/elizabeth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="431dp"
            android:layout_height="235dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="217dp"
                android:layout_height="197dp"
                android:layout_marginTop="14dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:hint="@string/nombre">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/repartidorNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="Elizabeth"
                        app:startIconDrawable="@drawable/baseline_person_outline_24" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:hint="@string/dni">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/superadminDocumento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="00000000"
                        app:startIconDrawable="@drawable/baseline_person_outline_24" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="203dp"
                android:layout_height="197dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="14dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:hint="@string/apellido">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/superadminApellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="Del Lago"
                        app:startIconDrawable="@drawable/baseline_person_outline_24" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/repartidorEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="superadmin@deligo.com"
                        app:startIconDrawable="@drawable/baseline_person_outline_24" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="430dp"
            android:layout_height="150dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_save"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/light_green"
                android:text="Guardar"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>