<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="25dp"
            android:background="@color/light_green"
            app:menu="@menu/top_app_bar_super_admin"
            app:navigationIcon="@drawable/icons8_izquierda_circulo_48"
            app:title="@string/title"
            app:titleCentered="true"
            app:titleTextAppearance="@style/ToolbarTitleStyle" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="369dp"
            android:layout_height="54dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center_horizontal|center_vertical"
                android:text="Registro de Platillos"
                android:textColor="@color/light_green"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="365dp"
                android:layout_height="41dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center_horizontal|center_vertical"
                android:text="Deben ser 2 imágenes como mínimo"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="360dp"
        android:layout_height="421dp"
        android:background="@drawable/layout_border"
        android:orientation="horizontal"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="center">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="311dp"
        android:layout_height="385dp"
        android:layout_marginTop="14dp"
        android:orientation="vertical"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/nombre1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adminNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text=" "
                app:startIconDrawable="@drawable/baseline_person_outline_24" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/precio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adminApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text=" "
                app:startIconDrawable="@drawable/baseline_money_24" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/descripcion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adminNumeroDocumento"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:inputType="text"
                android:text=" " />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="285dp"
            android:layout_height="113dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_margin="16dp">

            <Button
                android:id="@+id/continuar1"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/light_green"
                android:text="Continuar"
                android:onClick="verFinalizarRegistroPlato"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cancelar1"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:onClick="verRegistroPlatosParte1"
                android:backgroundTint="@color/md_theme_error"
                android:text="Cancelar"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>